--- a/packages/docs/docs/guides/1-hotkeys.mdx
+++ b/packages/docs/docs/guides/1-hotkeys.mdx
@@ -6,6 +6,8 @@ category: guide
 
 import { DemoBox } from "../../src/components/demo/demo-box";
 
+# Hotkeys
+
 Headless Tree provides its own implementation of keybindings that can be customized and extended.
 
 Further down on this page, you can find a list of all available hotkeys. Note that the availability of hotkeys
