docs: dnd overview

--- a/packages/docs/docs/contributing/1-tests.mdx
+++ b/packages/docs/docs/contributing/1-tests.mdx
@@ -66,7 +66,8 @@ This is automatically done before each test for the initially rendered tree.
 You can see and experiment with the tree variant that is used during tests with this storybook
 instance:
 
-https://headless-tree.lukasbach.com/storybook/react/?path=/story/react-misc-sync-tree-used-in-unit-tests--unit-test-async
+- [Async Tree](https://headless-tree.lukasbach.com/storybook/react/?path=/story/react-misc-async-tree-used-in-unit-tests--unit-test-async)
+- [Sync Tree](https://headless-tree.lukasbach.com/storybook/react/?path=/story/react-misc-sync-tree-used-in-unit-tests--unit-test-sync)
 
 # Debugging tests
 
