--- a/packages/docs/docs/features/5-dnd.mdx
+++ b/packages/docs/docs/features/5-dnd.mdx
@@ -13,6 +13,14 @@ import {FeaturePageHeader} from "../../src/components/docs-page/feature-page-hea
     subtitle="Drag-and-drop Capabilities for tree items and external drag objects"
     feature="drag-and-drop"
 />
+
 <DemoBox tags={["feature/dnd"]} />
 
-TODO
+The Drag-And-Drop Feature provides drag-and-drop capabilities. It allows to drag a single tree item (or many of the
+[selection feature](/features/selection) is included in the tree config) and drop it somewhere else in the tree.
+The feature also allows you to create interactions between the tree and external drag objects, allowing you to drag
+tree items out of the tree, or foreign data objects from outside the tree inside. As extension of that, this can
+also be used to implement drag behavior between several trees.
+
+Since this feature composes a large part of the functionality of Headless Tree, it is documented in its own section
+"Drag and Drop" on the left, get started with the [Drag and Drop Overview Page](/dnd/overview).
