--- a/packages/docs/docs/features/99-main.mdx
+++ b/packages/docs/docs/features/99-main.mdx
@@ -15,7 +15,8 @@ import { FeaturePageHeader } from "../../src/components/docs-page/feature-page-h
     isCore={true}
 />
 
-
 <DemoBox tags={["feature/main"]} />
 
-TODO
+The main feature provides the core functionality of Headless Tree, enabling most functions that are
+required by other features to work. Similar to the [Tree Feature](/features/tree), the main feature
+is included automatically and does not need to be actively imported.
