docs: remaining dnd docs

--- a/packages/docs/docs/dnd/1-overview.mdx
+++ b/packages/docs/docs/dnd/1-overview.mdx
@@ -175,6 +175,16 @@ const tree = useTree<Item>({
 });
 ```
 
+<DemoBox tags={["feature/dnd"]} initialStory="react-drag-and-drop-on-drop-handler--on-drop-handler" />
+
+:::info
+
+In the Demo above, switch to the sample "Multiple Trees" in the selection box to see a sample
+of how to use the `removeItemsFromParents` and `insertItemsAtTarget` methods instead of the
+`createOnDropHandler` method.
+
+:::
+
 ## Updated caches in async data loaders
 
 :::info
