--- a/packages/docs/docs/dnd/1-overview.mdx
+++ b/packages/docs/docs/dnd/1-overview.mdx
@@ -41,8 +41,7 @@ Note that the `indent` property is not required in the core tree configuration, 
 indentation when rendering your items. For Drag and Drop it is required however to determine the drop position
 when the user is trying to reparent an item. (TODO link)
 
-<!-- TODO render types as interfaces in typedoc, then fix links here -->
-The Dnd Feature also exposes a [Dnd State](/api/core#DndState) that you can [handle yourself if you want to](/guides/state).
+The Dnd Feature also exposes a [Dnd State](/api/core/interface/DndState) that you can [handle yourself if you want to](/guides/state).
 
 ```jsx typescript
 import {
